--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
 
   datasource:
     platform: mysql
-    url: jdbc:mysql://forclass.c8ydsrovkrwj.ap-northeast-2.rds.amazonaws.com/test?autoReconnect=true # 변경해주세요
-    username:  # 변경해주세요
-    password:  # 변경해주세요
+    url: jdbc:mysql://zero-link.crnudsama3c6.ap-northeast-2.rds.amazonaws.com/zero-link?autoReconnect=true # 변경해주세요
+    username: zero # 변경해주세요
+    password: Zero1234!! # 변경해주세요
     driver-class-name: com.mysql.cj.jdbc.Driver # mysql 8버전
     # driver-class-name: com.mysql.jdbc.Driver # mysql 5버전
