--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-data-jpa') //mysql 5버전의 경우 삭제.
 
-
+    // https://mavenlibs.com/maven/dependency/de.neuland-bfi/pug4j
+    implementation group: 'de.neuland-bfi', name: 'pug4j', version: '2.0.5'
 
     // Web
     implementation ('org.springframework.boot:spring-boot-starter-web')
