--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
     // Web
     implementation ('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     // Security, Authentication
     implementation('org.springframework.boot:spring-boot-starter-security')
